# gem

./: .gitignore  CMakeLists.txt
src/: gem.cc  gem.h  main.cc
